--- a/overmij.html
+++ b/overmij.html
@@ -2,9 +2,11 @@
 <html lang="nl">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Opdracht voor NHA met een responsive design.">
+    <meta name="description" content="Opdracht voor NHA met bootstrap.">
     <link rel="stylesheet" href="style/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -84,5 +86,11 @@
     </section>
 
 </div>
+<footer>© Lianne Strik <span id="year"></span></footer>
+
 </body>
 </html>
+<script type="application/javascript">
+    let year = new Date().getFullYear();
+    document.getElementById("year").innerHTML = year;
+</script>
